/*
 * This file was generated by the Gradle 'init' task.
 */

buildscript {
  repositories {
	maven {
            url uri('javacc-gradle-plugin')
        }
        mavenLocal()
        maven {
            url = 'http://repo.maven.apache.org/maven2'
        }

        maven {
            url = 'https://yahoo.bintray.com/maven'
        }

        maven {
            url = 'https://repository.apache.org/content/groups/public'
        }
    }

  dependencies {
    classpath 'com.yahoo.vespa:configgen:7.28.21'
        classpath group: 'vespa.ca.coglinc',
                  name: 'javacc-gradle-plugin',
                  version: '3.0.2'
  }
}

allprojects {
    group = 'com.yahoo.vespa'
    version = '7.28.21'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'war'
    apply plugin: 'ca.coglinc.javacc'

    repositories {
        mavenLocal()
        maven {
            url = 'http://repo.maven.apache.org/maven2'
        }

        maven {
            url = 'https://yahoo.bintray.com/maven'
        }

        maven {
            url = 'https://repository.apache.org/content/groups/public'
        }
    }

    dependencies {
	javacc 'com.helger:parser-generator-cc:1.1.1'
    }

    sourceCompatibility = JavaVersion.VERSION_11

    publishing {
        publications {
            maven(MavenPublication) {
                from(components.java)
            }
        }
    }

    sourceSets {
      main{
        java {
           srcDir "${buildDir}/generated-sources/configgen/"
           srcDir "${buildDir}/generated-sources/configgen-default/"
           srcDir "${buildDir}/generated/javacc/"
        }
      }
      test {
	java {
           srcDir "${buildDir}/generated-sources/configgen-test/"
           srcDir "${buildDir}/generated-sources/configgen-default-test/"
	}
      }
    }

    compileJava.dependsOn generateConfigurationsTask(
	"${projectDir}/src/main/resources/configdefinitions", 
	"${buildDir}/generated-sources/configgen-default/")

    compileTestJava.dependsOn generateConfigurationsTask(
        "${projectDir}/src/test/resources/configdefinitions",
        "${buildDir}/generated-sources/configgen-default-test/")

    compileJava.dependsOn compileJavacc
 
    
    test {
      reports.html.enabled = false

      jvmArgs 	'--add-opens=java.base/java.lang=ALL-UNNAMED', 
		'--add-opens=java.base/java.net=ALL-UNNAMED', 
		'--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED', 
		'--add-opens=java.base/java.io=ALL-UNNAMED', 
		'--illegal-access=warn'
    }

}

ext {
  junit_4 = 'junit:junit:4.12'
  hamcrest_core = 'org.hamcrest:hamcrest-core:1.3'
  hamcrest_library = 'org.hamcrest:hamcrest-library:1.3'
  hamcrest_all = 'org.hamcrest:hamcrest-all:1.3'
  guava = 'com.google.guava:guava:20.0'
  http_client = 'org.apache.httpcomponents:httpclient:4.4.1'
  http_core = 'org.apache.httpcomponents:httpcore:4.4.1'
  
  mockito = 'org.mockito:mockito-core:1.10.19'
  jaxb_api = 'javax.xml.bind:jaxb-api:2.3.0'
  guice = 'com.google.inject:guice:3.0'
  bouncycastle = 'org.bouncycastle:bcpkix-jdk15on:1.58'
  findbugs_annotations = 'com.google.code.findbugs:annotations:1.3.9'
  findbugs_jsr = 'com.google.code.findbugs:jsr305:1.3.9'
  jackson_core = 'com.fasterxml.jackson.core:jackson-core:2.8.11'
  jackson_databind = 'com.fasterxml.jackson.core:jackson-databind:2.8.11.2'

  protobuf_3 = 'com.google.protobuf:protobuf-java:3.7.0'
  jettison = 'org.codehaus.jettison:jettison:1.3.1'  
  felix = 'org.apache.felix:org.apache.felix.framework:6.0.2'
}

task testReport(type: TestReport) {
    setDescription('Generates a test report from all subproject test tasks')
    setGroup(JavaBasePlugin.DOCUMENTATION_GROUP)

    def testFailures = 0
    destinationDir = file("$buildDir/reports/allTests")
    reportOn subprojects*.test

    subprojects {
        test {
            ignoreFailures true
            afterSuite { td, tr ->
                if (td.getParent() == null) {
                    testFailures += tr.getFailedTestCount()
                }
            }
        }
    }

    doLast {
        if (testFailures > 0) {
           throw new Exception("There were ${testFailures} test failures")
        }
    }
}

task build {
    println "lets build"
    dependsOn testReport
}

def generateConfigurationsTask(source, dest) { 
  def randomTask = "configgen_" + 
	source.replaceAll("[^A-Za-z0-9]", "") + 
	"_" + new Random().nextInt(1000000000)

  return tasks.create(randomTask) {
    logger.info("Creating codegen task for " + source)
    doLast {
      logger.info("Executing codegen task for " + source)
      if( !new File("${dest}").exists() ) {
        new File("${dest}").mkdirs() 
        FileTree tree = fileTree("${source}").include('**/*.def')
          tree.each {File file ->
            codegenSpec("${dest}", "${file}")
          }
      }
    }
  }
}

def codegenSpec(dest, spec) {
    return tasks.create("${spec}".replaceAll("[^A-Za-z0-9]", "")) {
      if( !new File("${dest}").exists() ) {
        new File("${dest}").mkdirs()
      }

      if( !new File("${buildDir}").exists() ) {
        new File("${buildDir}").mkdirs()
      }
      javaexec {
        workingDir = file("${buildDir}")
        outputs.dir "${dest}"

        classpath = buildscript.configurations.classpath
        main = "com.yahoo.config.codegen.MakeConfig"
        jvmArgs = [ "-Dconfig.dest=${dest}", "-Dconfig.spec=${spec}" ]
      }
    }
}

def executeCodegen(dest, spec) {
      if( !new File(dest).exists() ) {
        println "creating " + dest 
        new File(dest).mkdirs()
      }
	println "executing " + spec +" , " + dest

      javaexec {
        workingDir = file(buildDir)

        classpath = buildscript.configurations.classpath
        main = "com.yahoo.config.codegen.MakeConfig"
        jvmArgs = [ "-Dconfig.dest=" + dest, "-Dconfig.spec=" + spec ]
      }
}
